# VoxMysticum

./: .gitignore  CMakeLists.txt  makefile
res/Data/Config/: config.json
res/Resources/Shaders/: ambient.fsh  color_override.fsh  white.fsh
res/Resources/Textures/: barrel.tmd  bat.tmd  health_up.tmd  heart_effect.tmd  heart_pickup.tmd  light.tmd  magic_arcane.tmd  magic_fire.tmd  magic_ice.tmd  magic_lightning.tmd  magic_rock.tmd  pedestal.tmd  shadow.tmd  wand.tmd  wizard_arcane.tmd  wizard_fire.tmd  wizard_ice.tmd  wizard_lightning.tmd  wizard_rock.tmd
src/: AnimPlayer.cpp  AnimPlayer.hpp  Barrel.cpp  BaseDrawable.cpp  BaseDrawable.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseTMDDrawable.cpp  BaseTMDDrawable.hpp  Bat.cpp  Bat.hpp  Config.cpp  Config.hpp  Effect.cpp  Entity.cpp  Entity.hpp  EntityFlags.hpp  GameState.cpp  GameState.hpp  IBaseEntity.cpp  IBaseEntity.hpp  IBaseResource.hpp  IBaseState.hpp  IDFactory.cpp  IDFactory.hpp  ILogger.hpp  KeyBindings.cpp  KeyBindings.hpp  Light.cpp  Light.hpp  Logging.cpp  Logging.hpp  Magic.cpp  PAttributes.hpp  Player.cpp  Player.hpp  RNG.cpp  RNG.hpp  ResourceManager.cpp  ResourceManager.hpp  (+13 more)
src/Characters/: Blaze.hpp  Brock.hpp  CharacterDef.hpp  Dexter.hpp  Oswald.hpp  Sparky.hpp
src/Entities/: Barrel.cpp  Barrel.hpp  Bat.cpp  Bat.hpp  Effect.cpp  Effect.hpp  Entity.cpp  Entity.hpp  Hurtable.cpp  Hurtable.hpp  IBaseEntity.cpp  IBaseEntity.hpp  Light.cpp  Light.hpp  Magic.cpp  Magic.hpp  Pedestal.cpp  Pedestal.hpp  PickupEntity.cpp  PickupEntity.hpp  Player.cpp  Player.hpp
src/Entities/PedestalItems/: Heart.cpp  Heart.hpp  IBasePedestalItem.hpp  Wand.cpp  Wand.hpp
src/Entities/Pickups/: HealthPickup.cpp  HealthPickup.hpp
src/Logging/: StandardLogger.cpp
src/PedestalItems/: IBasePedestalItem.cpp  IBasePedestalItem.hpp  Wand.cpp  Wand.hpp
src/Resources/: Font.cpp  Font.hpp  SoundBuffer.hpp  TMD.cpp  TMD.hpp  Texture.cpp
src/States/: BaseState.cpp  BaseState.hpp  CharacterSelectState.cpp  CharacterSelectState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  IBaseState.hpp  PauseState.cpp  PauseState.hpp
